# redrabbit

./: .gitignore
backend/: :db:  Cargo.toml  diesel.toml
backend/migrations/2024-07-15-141814_init/: down.sql  up.sql
backend/src/: api.rs  database.rs  main.rs
backend/src/api/: nodes.rs
backend/src/database/: nodes.rs  recursive_from_root.sql  schema.rs
backend/src/database/sql/: recur_tfi.sql  recur_tfr.sql
backend/src/util/: id.rs
frontend/: package-lock.json
frontend/src/: App.svelte  app.css
frontend/src/lib/: Button.svelte  Checkbox.svelte  ContextMenu.svelte  Icon.svelte  TaskCollection.svelte  TaskCreationWizzard.svelte  TaskTree.svelte  TasksToolbar.svelte  Tree.svelte
frontend/src/models/: ctx_menu.ts  tasks.ts  tree.ts
frontend/src/models/util/: backend_adapter.ts
frontend/src/util/: backend_adapter.ts  xevents.ts  xundo.ts
